[gd_scene load_steps=40 format=2]

[ext_resource path="res://characters/enemy/enemy.gd" type="Script" id=1]
[ext_resource path="res://graphics/assets/HLM1/enemy/sprEWaiterLegs_strip16.png" type="Texture" id=2]
[ext_resource path="res://graphics/bullet.png" type="Texture" id=3]
[ext_resource path="res://characters/health.gd" type="Script" id=4]
[ext_resource path="res://weapons/bullet/bullet.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Walking.tscn" type="PackedScene" id=6]
[ext_resource path="res://graphics/assets/HLM1/enemy/sprEWaiterWalkUzi_strip8.png" type="Texture" id=7]
[ext_resource path="res://graphics/assets/HLM1/enemy/sprEWaiterAttackUzi_strip2.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 60, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 120, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 180, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 240, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 300, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 360, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 420, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 2 )
region = Rect2( 540, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 2 )
region = Rect2( 600, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 2 )
region = Rect2( 660, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 2 )
region = Rect2( 720, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 2 )
region = Rect2( 780, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 2 )
region = Rect2( 840, 0, 60, 60 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 2 )
region = Rect2( 900, 0, 60, 60 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "eneWalk",
"speed": 20.0
} ]

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 7 )
region = Rect2( 44, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 7 )
region = Rect2( 88, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 7 )
region = Rect2( 132, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 7 )
region = Rect2( 176, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 7 )
region = Rect2( 220, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 7 )
region = Rect2( 264, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 7 )
region = Rect2( 308, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 44, 24 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 8 )
region = Rect2( 44, 0, 44, 24 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "eneUzi",
"speed": 20.0
}, {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "eneShoot",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=29]
radius = 27.3678
height = 51.1256

[sub_resource type="CircleShape2D" id=30]
radius = 150.931

[sub_resource type="CircleShape2D" id=31]

[node name="Enemy" type="KinematicBody2D"]
z_as_relative = false
collision_layer = 16
collision_mask = 6
script = ExtResource( 1 )
bullet_speed = 2500
detect_radius = 300
fire_rate = 1.0
Bullet = ExtResource( 5 )

[node name="BulletSpawn" type="Sprite" parent="."]
visible = false
position = Vector2( 39.2569, -2.84546 )
rotation = 1.5708
texture = ExtResource( 3 )

[node name="EnemySprite" type="Sprite" parent="."]
scale = Vector2( 2.5, 2.5 )
__meta__ = {
"_edit_lock_": true
}

[node name="eneLegs" type="AnimatedSprite" parent="EnemySprite"]
visible = false
position = Vector2( -7.93318, 0.330549 )
frames = SubResource( 17 )
animation = "eneWalk"
frame = 8

[node name="eneTorso" type="AnimatedSprite" parent="EnemySprite"]
position = Vector2( 0.0858551, 0 )
frames = SubResource( 28 )
animation = "eneUzi"
frame = 3

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2( -17.6325, 0.21186 )
rotation = -1.03726
scale = Vector2( 0.5, 0.5 )
shape = SubResource( 29 )

[node name="ShootTimer" type="Timer" parent="."]
autostart = true

[node name="Health" type="Node" parent="."]
script = ExtResource( 4 )

[node name="visibility" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="visibility"]
shape = SubResource( 30 )

[node name="Respawn" type="Timer" parent="."]
wait_time = 15.0
one_shot = true

[node name="GunSoundPlayer" parent="." instance=ExtResource( 6 )]

[node name="Aim_Lock" type="TouchScreenButton" parent="."]
position = Vector2( -17.3572, 0.0944862 )
scale = Vector2( 3.5, 3.5 )
shape = SubResource( 31 )
shape_centered = false
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="body_entered" from="visibility" to="." method="_on_visibility_body_entered"]
[connection signal="body_exited" from="visibility" to="." method="_on_visibility_body_exited"]
[connection signal="timeout" from="Respawn" to="." method="_on_Respawn_timeout"]
[connection signal="pressed" from="Aim_Lock" to="." method="_on_Aim_Lock_pressed"]
